--- a/index.html
+++ b/index.html
@@ -21,26 +21,27 @@
         <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
 
         <picture>
-            <source media="(min-width: 320px)" srcset="majorca-waves">
-            <source media="(max-width: 780px)" srcset="majorca-waves">
-            <source media="(max-width: 1024px)" srcset="majorca-waves">
+            <source media="(min-width: 320px)" srcset="majorca-waves-S.png">
+            <source media="(max-width: 780px)" srcset="majorca-waves-M.png">
+            <source media="(max-width: 1024px)" srcset="majorca-waves-L.png">
             <img src="images/majorca-waves-L.png" alt="ocean waves from a high rock cliff perspective">
         </picture>
         <picture>
-            <source media="(min-width: 320px)" srcset="majorca-beach">
-            <source media="(max-width: 780px)" srcset="majorca-beach">
-            <source media="(max-width: 1024px)" srcset="majorca-beach">
+            <source media="(min-width: 320px)" srcset="majorca-beach-S">
+            <source media="(max-width: 780px)" srcset="majorca-beach-M">
+            <source media="(max-width: 1024px)" srcset="majorca-beach-L">
             <img src="images/majorca-beach-L.png" alt="view of a beach within a cove of rocks">
         </picture>
         <picture>
-            <source media="(min-width: 320px)" srcset="majorca-cove">
-            <source media="(max-width: 780px)" srcset="majorca-cove">
-            <source media="(max-width: 1024px)" srcset="majorca-cove">
+            <source media="(min-width: 320px)" srcset="majorca-cove-S">
+            <source media="(max-width: 780px)" srcset="majorca-cove-M">
+            <source media="(max-width: 1024px)" srcset="majorca-cove-L">
             <img src="images/majorca-cove-L.png" alt="view of a cove beach with blue water">
         </picture>
     </section>
 
-Plan Your Trip
+    <section>
+    <h2>Plan Your Trip</h2>
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 How to Get there
 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
