--- a/majorca.html
+++ b/majorca.html
@@ -7,7 +7,7 @@
         <title>Wunderlust Travel</title>
         <meta name="description" content="A travel encyclopedia for our most popular destination, Majorca, including recommendations for travel and rooming.">
         <meta name="keywords" content="majorca, travel, beach, wunderlust, vacation">
-	    <meta name="robots" content="follow, index" />
+	    <meta name="robots" content="follow, index">
 
         <meta name="twitter:card" content="summary_large_image">
 	    <meta name="twitter:site" content="@wunderlusttravel">
@@ -16,11 +16,11 @@
 	    <meta name="twitter:image" content="images/majorca-beach-L">
 	    <meta name="twitter:creator" content="@dirkspence">
 
-        <meta property="og:title" content="Explore our most popular destination: Majorca" />
-	    <meta property="og:description" content="We host the internets most popular encyclopedia for planning your dream vacation." />
-	    <meta property="og:type" content="website" />
-	    <meta property="og:url" content="https://www.wunderlusttravel.com" />
-	    <meta property="og:image" content="images/majorca-beach-L" />
+        <meta property="og:title" content="Explore our most popular destination: Majorca">
+	    <meta property="og:description" content="We host the internets most popular encyclopedia for planning your dream vacation.">
+	    <meta property="og:type" content="website">
+	    <meta property="og:url" content="https://www.wunderlusttravel.com">
+	    <meta property="og:image" content="images/majorca-beach-L">
 
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
     </head>
